--- a/iiot/WiFiOTG/css/style.css
+++ b/iiot/WiFiOTG/css/style.css
@@ -2437,6 +2437,131 @@ body {
   text-decoration: none;
 }
 
+.main_wrap .mapBox {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.main_wrap .mapBox .map_card {
+  width: 100%;
+  max-width: 374px;
+  display: 0;
+  background-color: #0000007c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.main_wrap .mapBox .map_card .l_quantity {
+  width: 68px;
+  border-right: 1px #fff solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+}
+
+.main_wrap .mapBox .map_card .l_quantity p {
+  color: #fff;
+  text-align: center;
+}
+
+.main_wrap .mapBox .map_card .l_quantity p.nb {
+  color: #44E7FF;
+  font-size: 32px;
+  font-weight: bold;
+  padding-top: 8px;
+}
+
+.main_wrap .mapBox .map_card .l_quantity .nb_box {
+  width: 68px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+  border-bottom: 1px #fff solid;
+}
+
+.main_wrap .mapBox .map_card .l_quantity .nb_box:nth-child(2) {
+  border: none;
+}
+
+.main_wrap .mapBox .map_card .l_quantity .nb_box:nth-child(2) .nb {
+  color: #FFBF34;
+}
+
+.main_wrap .mapBox .map_card .r_info {
+  width: calc(100% - 69px);
+  padding: 15px;
+  position: relative;
+}
+
+.main_wrap .mapBox .map_card .r_info a.location_arrow {
+  width: 65px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.main_wrap .mapBox .map_card .r_info a.location_arrow img {
+  width: 100%;
+}
+
+.main_wrap .mapBox .map_card .r_info h4 {
+  color: #fff;
+  line-height: 1.2;
+  font-size: 19px;
+  font-weight: bold;
+  padding-bottom: 5px;
+  width: 100%;
+  max-width: calc(100% - 55px);
+}
+
+.main_wrap .mapBox .map_card .r_info p {
+  color: #fff;
+  line-height: 1.2;
+}
+
+.main_wrap .mapBox .map_card .r_info ul li {
+  padding: 3px 0;
+  padding-left: 25px;
+  position: relative;
+}
+
+.main_wrap .mapBox .map_card .r_info ul li::before {
+  position: absolute;
+  left: 0;
+  top: 7px;
+  content: "";
+  width: 15px;
+  height: 15px;
+  display: block;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.main_wrap .mapBox .map_card .r_info ul li.clock::before {
+  background-image: url(../images/icon_clock.svg);
+}
+
+.main_wrap .mapBox .map_card .r_info ul li.location::before {
+  height: 16px;
+  background-image: url(../images/icon_location.svg);
+}
+
 .wifiotg_info {
   width: 100%;
   padding: 40px 0;
