--- a/unicreate/assets/style.scss
+++ b/unicreate/assets/style.scss
@@ -27,6 +27,27 @@
     width: 100%;
   }
 }
+p.major{
+  color: #488b09;
+  font-weight: bolder;
+}
+table.alt tr td{
+  vertical-align: middle;
+  align-items: center;
+  text-align: center;
+}
+table th {
+  padding: 3px;
+  font-size: 0.8rem;
+  text-align: left;
+
+  &.w__ {
+    width: 80px;
+  }
+}
+table tbody tr:nth-child(2n + 1){
+  background-color: #eff2d042;
+}
 .banner {
   // h2{
   //   font-style: swap !important;
@@ -87,9 +108,13 @@ p.price{
 }
 .for_assess{
   background-attachment: fixed;
+  
   .inner{
     max-width: 900px;
     margin: 0 auto;
+    section{
+      padding:20px;
+    }
     .content{
       padding: 20px;
       background-color: #ffffffeb;
@@ -101,8 +126,28 @@ p.price{
     list-style-type: none;
     padding-left: 0;
     li{
-      padding-left: 0;
       font-size: 16px;
+      padding: 3px 0;
+      b{
+        background-color: #488b09;
+        color: #fff;
+        padding: 2px 5px;
+        border-radius: 4px;
+        font-size: 14px;
+        margin-right: 5px;
+        &.c_02{
+          background-color: #67b61c;
+        }
+        &.c_03{
+          background-color: #a5c841;
+        }
+        &.c_04{
+          background-color: #d68f27;
+        }
+        &.c_05{
+          background-color: #f41760;
+        }
+      }
     }
   }
   .table-wrapper{
@@ -198,23 +243,75 @@ footer.wrapper.style1 {
   }
 }
 
-@media (max-width:1200px) {
-}
-
-@media (max-width:1000px) {
-}
-
-@media (max-width:800px) {
+@media (max-width:736px) {
+  h3{
+    padding: 0 15px;
+  }
+  .mob-left{
+    text-align: left;
+  }
+  .content h2, .inner h2{
+    font-size: 1.6rem;
+  }
+  p.price{
+    text-align: left;
+    font-size: 14px;
+  }
 }
 
 @media (max-width:650px) {
+  table th{
+    padding: 3px;
+    font-size: 0.8rem;
+    text-align: center;
+    &.w__{
+      width: 42px;
+    }
+  }
+  table td{
+    padding:8px;
+  }
+  .for_nutritionist .items4 section{
+    h3{
+      padding: 0;
+    }
+    p{
+      text-align: left;
+      margin-bottom: 1rem;
+    }
+  }
+  .for_nutritionist .items-row3 section{
+    padding: 10px;
+  }
+  .for_nutritionist .items-row4 section{
+    padding: 10px;
+    p{
+      text-align: left;
+    }
+  }
+  .for_assess .list-d li{
+    font-size: 14px;
+    line-height: 1.5;
+    padding: 5px 0;
+  }
+  .mob_block{
+    display: block;
+  }
+  .wrapper.style1 > .inner {
+    // padding: 1.5rem 1rem;
+  }
 }
 
 @media (max-width:599px) {
-}
-
-@media (max-width:400px) {
-}
-
-@media (max-width:350px) {
+  p.price{
+    text-align: left;
+    font-size: 13px;
+    line-height: 1.5;
+    padding: 10px 15px;
+  }
+  .for_nutritionist .items-row3 section{
+    p{
+      font-size: 13px;
+    }
+  }
 }
