--- a/iiot/iTribe/css/style.scss
+++ b/iiot/iTribe/css/style.scss
@@ -77,7 +77,7 @@
     width:90%;
   }
   .inputBox{
-    height: 90px;
+    // height: 90px;
     padding: 15px;
     background: #ffffff9c;
     border-radius: 50px;
@@ -207,7 +207,7 @@
         padding:0;
       }
       .inputBox{
-        height: 75px;
+        // height: 75px;
         input{
           font-size: 20px;
           padding: 15px 20px;
@@ -232,8 +232,10 @@
         max-width: 20%;
         display: none;
       }
+      .app_info{
+        padding: 10px;
+      }
       .QRcode{
-        padding:10px 30px 20px 30px;
         img{
           max-width: 100%;
         }
