2023-鋪食金幣活動-更改新增圖片與更改路徑

--- a/iiot/TPUF-2023/html-collect/css/style.scss
+++ b/iiot/TPUF-2023/html-collect/css/style.scss
@@ -266,6 +266,7 @@ ul.nbsss {
   background: url(../images/stamp.png) center center no-repeat;
   tr{
     td{
+      width: 25%;
       position: relative;
       padding:15px 5px;
       .done{
